Development
    Add in new media state, MEDIA_STATE_BUFFERING
    Updated Japanese Translation
    dbus - fixup GetPlayState to give more correct values
    dbus - add GetCachePercent method
    libgmtk - gmtk_media_player add ATTRIBUTE_CACHE_PERCENT
    Tell mplayer to ignore the xscreensaver, as gnome-mplayer controls it
    Make audio track and subtitle selection work correctly even when metadata is missing
    Add in generic ALSA and PulseAudio devices to the output selections even if we have ALSA and PulseSupport
    Emit dbus events on media state changes, useful for gecko-mediaplayer
    libgmtk - gmtk_media_player, block all event emissions when in restart mode
    Make cover art lookup with filenames in the form of "Artist - Title.xxx" where xxx can be any extension
    Only set don't play next if we are playing something, fixes playlist problem.
    Improvements to shoutcast media/station info
    Add GetTitle to dbus methods
    Fix GetDuration and GetTime dbus methods
    Tag as 1.0.4b1
    Minor tweaks to the autopause code
    Keep restarting mplayer when ALSA device is busy and AO is alsa, sometimes Pulse is slow to release it
    libgmtk - gmtk_media_player set attribute for audio_channels
    Update tracker status message when pausing
    Disable tracker focus
    Fix minor issue with vcd://
    Detect UBUNTU_MENUPROXY and enable_global_menu = TRUE when not NULL
    Disable button focus on control bar
    Fix problem when chapters = 1, media really doesn't have chapters
    Fix stop in network/streaming mode
    Make sure mplayer is dead before quitting
    Try and solve the apple trailer issues, still may have issues
    When playing an ICY stream, clear the album metadata fixes problem when switching from MP3 to stream
    When playlist is open, don't resize the media window
    Fix up some problems with apple trailers, still may have problems
    Updated Polish translation
    Fix up some compiler warnings